# tala

./: .gitignore  Makefile.am  README.md  TODO  configure.ac
src/: Makefile.am
src/FFNet/: FFNet.c  FFNet.h  FFNet_Activation_Categories.h  FFNet_Eigen.c  FFNet_Eigen.h  FFNet_Matrix.h  FFNet_Pattern.h  FFNet_Pattern_Activation.c  FFNet_Pattern_Activation.h  FFNet_Pattern_Categories.h  Makefile  Makefile.am  praat_FFNet_init.cpp
src/GSL/: Makefile  Makefile.am
src/LPC/: Cepstrum.c  Cepstrum.h  Cepstrum_and_Spectrum.c  Cepstrum_and_Spectrum.h  Cepstrumc.c  Cepstrumc.h  Klatt.h  LPC.c  LPC.h  LPC_and_Formant.c  LPC_and_Formant.h  LPC_and_LFCC.c  LPC_and_LFCC.h  LPC_and_Polynomial.h  LPC_and_Tube.h  LPC_to_Spectrogram.h  LPC_to_Spectrum.c  LPC_to_Spectrum.h  Makefile.am  Sound_and_Cepstrum.c  Sound_and_Cepstrum.h  Sound_and_LPC.c  Sound_and_LPC.h  Sound_and_LPC_robust.c  Sound_and_LPC_robust.h  Tube.c  Tube.h  praat_LPC_init.cpp
src/artsynth/: Art_Speaker.cpp  Art_Speaker.h  Art_Speaker_Delta.h  Art_Speaker_to_VocalTract.h  Articulation.cpp  Articulation.h  Artword.cpp  Artword.h  ArtwordEditor.cpp  ArtwordEditor.h  Artword_Speaker.h  Artword_Speaker_Sound.h  Artword_Speaker_to_Sound.h  Artword_to_Art.h  Delta.h  Makefile.am  Speaker.cpp  Speaker.h  Speaker_to_Delta.h  praat_Artsynth.cpp
src/audio/: Makefile.am
src/audio/FLAC/: Makefile.am
src/audio/mp3/: Makefile.am  mp3.c  mp3.h
src/contrib/ola/: FeatureWeights.c  KNN_def.h  Makefile.am  Pattern_to_Categories_cluster.h  praat_contrib_Ola_KNN.cpp
src/dwsys/: Collection_extensions.c  Collection_extensions.h  Command.h  Eigen.c  Eigen.h  Index.c  Index.h  Makefile.am  NUM2.c  NUM2.h  NUMcblas.c  NUMclapack.c  NUMf2c.c  NUMfft_d.c  NUMlapack.c  NUMmachar.c  NUMsort2.c  Permutation.c  Permutation.h  Permutation_and_Index.h  SVD.c  SVD.h  SimpleVector.c  SimpleVector.h  Simple_extensions.c  Simple_extensions.h  regularExp.c  regularExp.h
src/dwtools/: Activation.h  AffineTransform.c  AffineTransform.h  CC.c  CC.h  CCA.c  CCA.h  CCA_and_Correlation.c  CCA_and_Correlation.h  CCs_to_DTW.h  Categories.c  Categories.h  CategoriesEditor.c  CategoriesEditor.cpp  CategoriesEditor.h  Categories_and_Strings.h  ClassificationTable.c  ClassificationTable.h  Configuration.c  Configuration.h  Configuration_AffineTransform.c  Configuration_AffineTransform.h  Configuration_and_Procrustes.c  Configuration_and_Procrustes.h  Confusion.c  Confusion.h  DTW.c  DTW.h  DTW_and_TextGrid.h  Discriminant.c  Discriminant.h  Discriminant_Pattern_Categories.c  Discriminant_Pattern_Categories.h  Distance.c  Distance.h  Eigen_and_Matrix.h  Eigen_and_Procrustes.c  Eigen_and_Procrustes.h  Eigen_and_SSCP.h  Eigen_and_TableOfReal.c  (+85 more)
src/fon/: AmplitudeTier.cpp  AmplitudeTier.h  AmplitudeTierEditor.cpp  AmplitudeTierEditor.h  AnyTier.c  AnyTier.cpp  AnyTier.h  Cochleagram.c  Cochleagram.cpp  Cochleagram.h  Cochleagram_and_Excitation.h  Distributions_and_Transition.cpp  Distributions_and_Transition.h  DurationTier.cpp  DurationTier.h  DurationTierEditor.cpp  DurationTierEditor.h  Excitation.c  Excitation.cpp  Excitation.h  Excitation_to_Formant.h  ExperimentMFC.cpp  ExperimentMFC.h  Formant.cpp  Formant.h  FormantGrid.cpp  FormantGrid.h  FormantGridEditor.cpp  FormantGridEditor.h  FormantTier.cpp  FormantTier.h  FujisakiPitch.cpp  FujisakiPitch.h  Function.cpp  Function.h  FunctionEditor.cpp  FunctionEditor.h  Harmonicity.cpp  Harmonicity.h  Image.cpp  (+137 more)
src/gram/: Makefile  Makefile.am  Network.cpp  Network.h  OTGrammar.cpp  OTGrammar.h  OTGrammarEditor.cpp  OTGrammarEditor.h  OTMulti.cpp  OTMulti.h  OTMultiEditor.cpp  OTMultiEditor.h  praat_gram.cpp
src/kar/: Makefile.am
src/main/: main_Praat.cpp
src/num/: Makefile.am  NUM.cpp  NUM.h  NUM2.c  NUM2.h  NUMarrays.cpp  NUMf2c.c  NUMfft_core.h  NUMlapack.c  NUMlapack.h  NUMlinprog.cpp  NUMmachar.c
src/num/glpk/: Makefile.am
src/ola/: FeatureWeights.c  FeatureWeights.h  KNN.c  KNN.h  Makefile.am  Pattern_to_Categories_cluster.h  praat_Ola_KNN.cpp
src/stat/: Distributions.h  Distributions_and_Strings.h  LogisticRegression.cpp  LogisticRegression.h  Makefile.am  PairDistribution.cpp  PairDistribution.h  Regression.cpp  Table.cpp  Table.h  TableEditor.cpp  TableEditor.h  TableOfReal.cpp  TableOfReal.h  praat_Stat.cpp
src/sys/: ButtonEditor.cpp  ButtonEditor.h  Collection.cpp  Collection.h  Data.cpp  Data.h  DataEditor.cpp  DataEditor.h  DemoEditor.cpp  DemoEditor.h  Editor.c  Editor.cpp  Editor.h  EditorM.h  Formula.cpp  Formula.h  Graphics_text.cpp  GuiButton.c  GuiMenu.cpp  GuiRadioButton.c  HyperPage.cpp  HyperPage.h  InfoEditor.cpp  InfoEditor.h  Interpreter.cpp  Interpreter.h  Makefile  Makefile.am  Script.cpp  Script.h  ScriptEditor.cpp  ScriptEditor.h  Simple.cpp  Simple.h  Strings.c  Strings.cpp  Strings.h  StringsEditor.cpp  StringsEditor.h  TextEditor.cpp  (+38 more)
src/sys/io/: Makefile.am  abcio.cpp  abcio.h  lispio.cpp  lispio.h
src/sys/melder/: Makefile.am  melder.cpp  melder.h  melder_atof.cpp  melder_audio.cpp  melder_audiofiles.cpp  melder_console.cpp  melder_error.cpp  melder_files.cpp  melder_ftoa.cpp  melder_readtext.cpp  melder_strings.cpp  melder_textencoding.cpp  melder_writetext.cpp
src/ui/: Formula.cpp  Formula.h  Graphics.cpp  Graphics.h  GraphicsP.h  GraphicsScreen.cpp  Graphics_colour.cpp  Graphics_grey.cpp  Graphics_image.cpp  Graphics_linesAndAreas.cpp  Graphics_mouse.cpp  Graphics_record.cpp  Graphics_text.cpp  Gui.cpp  Gui.h  GuiButton.cpp  GuiCheckButton.cpp  GuiDialog.cpp  GuiDrawingArea.cpp  GuiFileSelect.cpp  GuiLabel.cpp  GuiList.cpp  GuiMenu.cpp  GuiObject.cpp  GuiP.h  GuiRadioButton.cpp  GuiRowColumn.cpp  GuiText.cpp  GuiWindow.cpp  Interpreter.cpp  Interpreter.h  Makefile.am  Picture.cpp  Preferences.cpp  Preferences.h  Printer.cpp  Printer.h  UiField.cpp  UiFile.cpp  UiForm.cpp  (+19 more)
src/ui/editors/: AmplitudeTierEditor.cpp  AmplitudeTierEditor.h  ArtwordEditor.cpp  ArtwordEditor.h  ButtonEditor.cpp  ButtonEditor.h  CategoriesEditor.cpp  CategoriesEditor.h  DataEditor.cpp  DataEditor.h  DemoEditor.cpp  DurationTierEditor.h  Editor.cpp  Editor.h  EditorM.h  HyperPage.cpp  (+49 more)
(+1432 files in other folders)
