AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libFFNet.a
libFFNet_a_SOURCES = \
	FFNet.c \
	FFNet_Activation_Categories.c \
	FFNet_Eigen.c \
	FFNet_Matrix.c \
	FFNet_Pattern.c \
	FFNet_Pattern_Activation.c \
	FFNet_Pattern_Categories.c
