AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libartsynth.a
libartsynth_a_SOURCES =	\
	Art_Speaker.cpp \
	Art_Speaker_Delta.cpp \
	Art_Speaker_to_VocalTract.cpp \
	Articulation.cpp \
	Artword.cpp \
	Artword_to_Art.cpp \
	Delta.cpp \
	Speaker.cpp \
	Speaker_to_Delta.cpp
