AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LTLIBRARIES = libdwsys.la
libdwsys_la_SOURCES = \
	Collection_extensions.c \
	Command.c \
	Eigen.c \
	Index.c \
	Permutation.c \
	Permutation_and_Index.c \
	regularExp.c \
	Simple_extensions.c \
	SimpleVector.c \
	SVD.c
