AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libdwtools.a
libdwtools_a_SOURCES = Activation.c AffineTransform.c \
	Categories.c CategoriesEditor.cpp \
	Categories_and_Strings.c CCA.c CCA_and_Correlation.c \
	CC.c CCs_to_DTW.c \
	ClassificationTable.c Confusion.c \
	Configuration.c Configuration_AffineTransform.c \
	Configuration_and_Procrustes.c Distance.c \
	DTW.c DTW_and_TextGrid.c \
	Discriminant.c  Discriminant_Pattern_Categories.c \
	Eigen_and_Matrix.c Eigen_and_Procrustes.c \
	Eigen_and_TableOfReal.c\
	Eigen_and_SSCP.c Excitations.c \
	FilterBank.c FormantGrid_extensions.c \
	GaussianMixture.c \
	HMM.c \
	ICA.c Intensity_extensions.c \
	LFCC.c LongSound_extensions.c \
	KlattGrid.c KlattGridEditors.cpp KlattTable.c \
	MelFilter_and_MFCC.c MFCC.c \
	Minimizers.c \
	Matrix_extensions.c \
	Matrix_Categories.c MDS.c \
	Pattern.c PCA.c \
	Pitch_extensions.c Polynomial.c \
	Polygon_extensions.c Procrustes.c \
	Proximity.c \
	Resonator.c \
	Sampled2.c \
	Sound_and_FilterBank.c Sound_extensions.c \
	Sound_to_MFCC.c \
	Sound_to_Pitch2.c Sound_to_SPINET.c SPINET.c SPINET_to_Pitch.c \
	Spectrum_extensions.c SSCP.c Strings_extensions.c \
	Table_extensions.c TableOfReal_and_SVD.c\
	TableOfReal_extensions.c \
	TableOfReal_and_Permutation.c \
	TextGrid_extensions.cpp \
	VowelEditor.c \
	praat_MDS_init.cpp praat_BSS_init.cpp praat_HMM_init.cpp praat_KlattGrid_init.cpp praat_David_init.cpp
