AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libdwtools.a
libdwtools_a_SOURCES = Activation.cpp AffineTransform.cpp \
	Categories.cpp \
	Categories_and_Strings.cpp CCA.cpp CCA_and_Correlation.cpp \
	CC.cpp CCs_to_DTW.cpp \
	ClassificationTable.cpp Confusion.cpp \
	Configuration.cpp Configuration_AffineTransform.cpp \
	Configuration_and_Procrustes.cpp Distance.cpp \
	DTW.cpp DTW_and_TextGrid.cpp \
	Discriminant.cpp  Discriminant_Pattern_Categories.cpp \
	Eigen_and_Matrix.cpp Eigen_and_Procrustes.cpp \
	Eigen_and_TableOfReal.c\
	Eigen_and_SSCP.cpp Excitations.cpp \
	FilterBank.cpp FormantGrid_extensions.cpp \
	GaussianMixture.cpp \
	HMM.cpp \
	ICA.cpp Intensity_extensions.cpp \
	LFCC.cpp LongSound_extensions.cpp \
	KlattGrid.cpp KlattTable.cpp \
	MelFilter_and_MFCC.cpp MFCC.cpp \
	Minimizers.cpp \
	Matrix_extensions.cpp \
	Matrix_Categories.cpp MDS.cpp \
	Pattern.cpp PCA.cpp \
	Pitch_extensions.cpp Polynomial.cpp \
	Polygon_extensions.cpp Procrustes.cpp \
	Proximity.cpp \
	Resonator.cpp \
	Sampled2.cpp \
	Sound_and_FilterBank.cpp Sound_extensions.cpp \
	Sound_to_MFCC.cpp \
	Sound_to_Pitch2.cpp Sound_to_SPINET.cpp SPINET.cpp SPINET_to_Pitch.cpp \
	Spectrum_extensions.cpp SSCP.cpp Strings_extensions.cpp \
	Table_extensions.cpp TableOfReal_and_SVD.c\
	TableOfReal_extensions.cpp \
	TableOfReal_and_Permutation.cpp \
	TextGrid_extensions.cpp
