AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libfon.a
libfon_a_SOURCES = Transition.cpp Distributions_and_Transition.cpp \
   Function.cpp Sampled.cpp Matrix.cpp Vector.cpp Polygon.cpp PointProcess.cpp \
   Matrix_and_PointProcess.cpp Matrix_and_Polygon.cpp AnyTier.cpp RealTier.cpp \
   Sound.cpp LongSound.cpp Sound_files.cpp Sound_audio.cpp PointProcess_and_Sound.cpp Sound_PointProcess.cpp ParamCurve.cpp \
   Pitch.cpp Harmonicity.cpp Intensity.cpp Matrix_and_Pitch.cpp Sound_to_Pitch.cpp \
   Sound_to_Intensity.cpp Sound_to_Harmonicity.cpp Sound_to_Harmonicity_GNE.cpp Sound_to_PointProcess.cpp \
   Pitch_to_PointProcess.cpp Pitch_to_Sound.cpp Pitch_Intensity.cpp \
   PitchTier.cpp Pitch_to_PitchTier.cpp PitchTier_to_PointProcess.cpp PitchTier_to_Sound.cpp Manipulation.cpp \
   Pitch_AnyTier_to_PitchTier.cpp IntensityTier.cpp DurationTier.cpp AmplitudeTier.cpp \
   Spectrum.cpp Ltas.cpp Spectrogram.cpp SpectrumTier.cpp Ltas_to_SpectrumTier.cpp \
   Formant.cpp Image.cpp Sound_to_Formant.cpp Sound_and_Spectrogram.cpp \
   Sound_and_Spectrum.cpp Spectrum_and_Spectrogram.cpp Spectrum_to_Formant.cpp \
   FormantTier.cpp TextGrid.cpp TextGrid_Sound.cpp Label.cpp FormantGrid.cpp \
   Excitation.cpp Cochleagram.cpp Cochleagram_and_Excitation.cpp Excitation_to_Formant.cpp \
   Sound_to_Cochleagram.cpp Spectrum_to_Excitation.cpp \
   VocalTract.cpp VocalTract_to_Spectrum.cpp \
   Sound_enhance.cpp VoiceAnalysis.cpp \
   WordList.cpp SpellingChecker.cpp \
   FujisakiPitch.cpp \
   ExperimentMFC.cpp
