AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libfon.a
libfon_a_SOURCES = \
	AmplitudeTier.cpp \
	AnyTier.cpp \
	Cochleagram_and_Excitation.cpp \
	Cochleagram.cpp \
	Distributions_and_Transition.cpp \
	DurationTier.cpp \
	Excitation.cpp \
	Excitation_to_Formant.cpp \
	ExperimentMFC.cpp \
	Formant.cpp \
	FormantGrid.cpp \
	FormantTier.cpp \
	FujisakiPitch.cpp \
	Function.cpp \
	Harmonicity.cpp \
	Image.cpp \
	Intensity.cpp \
	IntensityTier.cpp \
	Label.cpp \
	LongSound.cpp \
	Ltas.cpp \
	Ltas_to_SpectrumTier.cpp \
	Manipulation.cpp \
	Matrix_and_Pitch.cpp \
	Matrix_and_PointProcess.cpp \
	Matrix_and_Polygon.cpp \
	Matrix.cpp \
	ParamCurve.cpp \
	Pitch_AnyTier_to_PitchTier.cpp \
	Pitch.cpp \
	Pitch_Intensity.cpp \
	PitchTier.cpp \
	PitchTier_to_PointProcess.cpp \
	PitchTier_to_Sound.cpp \
	Pitch_to_PitchTier.cpp \
	Pitch_to_PointProcess.cpp \
	Pitch_to_Sound.cpp \
	PointProcess_and_Sound.cpp \
	PointProcess.cpp \
	Polygon.cpp \
	RealTier.cpp \
	Sampled.cpp \
	Sound.cpp \
	Sound_and_Spectrogram.cpp \
	Sound_and_Spectrum.cpp \
	Sound_audio.cpp \
	Sound_enhance.cpp \
	Sound_files.cpp \
	Sound_PointProcess.cpp \
	Sound_to_Cochleagram.cpp \
	Sound_to_Formant.cpp \
	Sound_to_Harmonicity.cpp \
	Sound_to_Harmonicity_GNE.cpp \
	Sound_to_Intensity.cpp \
	Sound_to_Pitch.cpp \
	Sound_to_PointProcess.cpp \
	Spectrogram.cpp \
	Spectrum_and_Spectrogram.cpp \
	Spectrum.cpp \
	SpectrumTier.cpp \
	Spectrum_to_Excitation.cpp \
	Spectrum_to_Formant.cpp \
	SpellingChecker.cpp \
	TextGrid.cpp \
	TextGrid_Sound.cpp \
	Transition.cpp \
	Vector.cpp \
	VocalTract.cpp \
	VocalTract_to_Spectrum.cpp \
	VoiceAnalysis.cpp \
	WordList.cpp
