AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libgram.a
libgram_a_SOURCES = \
	Network.cpp \
	OTGrammar.cpp \
	OTMulti.cpp \
	OTGrammar_ex_metrics.cpp \
	OTGrammar_ex_NoCoda.cpp \
	OTGrammar_ex_NPA.cpp \
	OTGrammar_ex_tongueRoot.cpp
