AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libnum.a
libnum_a_SOURCES = \
	NUM.cpp \
	NUM2.c \
	NUMarrays.cpp \
	NUMcblas.c \
	NUMclapack.c \
	NUMear.cpp \
	NUMf2c.c \
	NUMfft_d.c \
	NUMhuber.c \
	NUMlapack.c \
	NUMlinprog.cpp \
	NUMmachar.c \
	NUMrandom.cpp \
	NUMsort.cpp \
	NUMsort2.c
