AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libstat.a
libstat_a_SOURCES = Table.cpp TableEditor.cpp Regression.cpp praat_Stat.cpp \
   TableOfReal.cpp Distributions.cpp Distributions_and_Strings.cpp PairDistribution.cpp \
   LogisticRegression.cpp
