AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LTLIBRARIES = libstat.la
libstat_la_SOURCES = \
	Distributions.cpp \
	Distributions_and_Strings.cpp \
	LogisticRegression.cpp \
	PairDistribution.cpp \
	Regression.cpp \
	Table.cpp \
	TableOfReal.cpp
