AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libsys.a
libsys_a_SOURCES = abcio.cpp lispio.cpp complex.cpp \
   melder_ftoa.cpp melder_atof.cpp melder_error.cpp melder_alloc.cpp melder.cpp melder_strings.cpp \
   melder_token.cpp melder_files.cpp melder_audio.cpp melder_audiofiles.cpp \
   melder_debug.cpp melder_sysenv.cpp melder_info.cpp melder_quantity.cpp \
   melder_textencoding.cpp melder_readtext.cpp melder_writetext.cpp melder_console.cpp melder_time.cpp \
   Thing.cpp Data.cpp Simple.cpp Collection.cpp Strings.cpp \
   Graphics.cpp Graphics_linesAndAreas.cpp Graphics_text.cpp Graphics_colour.cpp \
   Graphics_image.cpp Graphics_mouse.cpp Graphics_record.cpp \
   Graphics_utils.cpp Graphics_grey.cpp Graphics_altitude.cpp \
   GraphicsPostscript.cpp Graphics_surface.cpp \
   Script.cpp machine.cpp \
   GraphicsScreen.cpp Printer.cpp \
   Preferences.cpp site.cpp \
   Picture.cpp UiForm.cpp UiField.cpp UiFile.cpp UiPause.cpp Editor.cpp DataEditor.cpp HyperPage.cpp TextEditor.cpp \
   praat.cpp praat_actions.cpp praat_menuCommands.cpp praat_picture.cpp sendpraat.cpp sendsocket.cpp \
   praat_script.cpp praat_statistics.cpp praat_logo.cpp \
   praat_objectMenus.cpp InfoEditor.cpp ScriptEditor.cpp ButtonEditor.cpp Interpreter.cpp Formula.cpp \
   StringsEditor.cpp DemoEditor.cpp \
   motifEmulator.cpp GuiText.cpp GuiWindow.cpp Gui.cpp GuiObject.cpp GuiDrawingArea.cpp \
   GuiMenu.cpp GuiButton.cpp GuiLabel.cpp GuiCheckButton.cpp GuiRadioButton.cpp \
   GuiDialog.cpp GuiRowColumn.cpp GuiList.cpp GuiFileSelect.c
