AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libsys.a
libsys_a_SOURCES = abcio.cpp lispio.cpp complex.cpp melder_ftoa.cpp melder_atof.cpp \
   melder_error.cpp melder_alloc.cpp melder.cpp melder_strings.cpp melder_token.cpp \
   melder_files.cpp melder_audio.cpp melder_audiofiles.cpp melder_debug.cpp melder_sysenv.cpp \
   melder_info.cpp melder_quantity.cpp melder_textencoding.cpp melder_readtext.cpp \
   melder_writetext.cpp melder_console.cpp melder_time.cpp Thing.cpp Data.cpp Simple.cpp \
   Collection.cpp Strings.cpp Script.cpp
