AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

SUBDIRS = melder

noinst_LIBRARIES = libsys.a
libsys_a_SOURCES = \
	abcio.cpp \
	Collection.cpp \
	complex.cpp \
	Data.cpp \
	lispio.cpp \
	mp3.c \
	Script.cpp \
	Simple.cpp \
	Strings.cpp \
	Thing.cpp
