AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libmelder.a
libmelder_a_SOURCES = \
	melder.cpp \
	melder_alloc.cpp \
	melder_atof.cpp \
	melder_audio.cpp \
	melder_audiofiles.cpp \
	melder_console.cpp \
	melder_debug.cpp \
	melder_error.cpp \
	melder_files.cpp \
	melder_ftoa.cpp \
	melder_info.cpp \
	melder_quantity.cpp \
	melder_readtext.cpp \
	melder_strings.cpp \
	melder_sysenv.cpp \
	melder_textencoding.cpp \
	melder_time.cpp \
	melder_token.cpp \
	melder_writetext.cpp
