AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libeditors.a
libeditors_a_SOURCES = \
	AmplitudeTierEditor.cpp \
	ArtwordEditor.cpp \
	ButtonEditor.cpp \
	CategoriesEditor.cpp \
	DataEditor.cpp \
	DemoEditor.cpp \
	DurationTierEditor.cpp \
	Editor.cpp \
	FormantGridEditor.cpp \
	FunctionEditor.cpp \
	HyperPage.cpp \
	InfoEditor.cpp \
	IntensityTierEditor.cpp \
	KlattGridEditors.cpp \
	ManipulationEditor.cpp \
	OTGrammarEditor.cpp \
	OTMultiEditor.cpp \
	PitchEditor.cpp \
	PitchTierEditor.cpp \
	PointEditor.cpp \
	RealTierEditor.cpp \
	RunnerMFC.cpp \
	ScriptEditor.cpp \
	SoundRecorder.cpp \
	SpectrogramEditor.cpp \
	SpectrumEditor.cpp \
	SoundEditor.cpp \
	StringsEditor.cpp \
	TableEditor.cpp \
	TextEditor.cpp \
	TextGridEditor.cpp \
	TimeSoundAnalysisEditor.cpp \
	TimeSoundEditor.cpp \
	VowelEditor.cpp
