AM_CFLAGS = $(COMMON) -I @abs_top_srcdir@/src -std=gnu99
AM_CPPFLAGS = $(COMMON) -I @abs_top_srcdir@/src

noinst_LIBRARIES = libinit.a
libinit_a_SOURCES = \
	praat_Artsynth.cpp \
	praat_BSS_init.cpp \
	praat_David_init.cpp \
	praat_Exp.cpp \
	praat_FFNet_init.cpp \
	praat_Fon.cpp \
	praat_gram.cpp \
	praat_HMM_init.cpp \
	praat_KlattGrid_init.cpp \
	praat_LPC_init.cpp \
	praat_MDS_init.cpp \
	praat_Ola_KNN.cpp \
	praat_Sound_init.cpp \
	praat_Stat.cpp \
	Praat_tests.cpp \
	praat_TextGrid_init.cpp
